# cpp-experiments

./: CMakeLists.txt  Makefile  README.md
source/: main.cpp
tests/: gtest_utilities.cpp
